--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "compilar:sass": "sass --watch src/scss:build/css",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "build:sass": "purgecss --css build/css/style.css --content index.html pages/*.html --output build/css/meeti.css"
+    
   },
   "author": "Jeanzb",
   "license": "ISC",
